src/test/java/ru/spbstu/icc/kspt/generator/grammar/generated/Test2Parser.java
// Generated from C:/Users/zador/IdeaProjects/antlr-trainer/src/test/resources/grammar/parser\Test2.g4 by ANTLR 4.10.1
package ru.spbstu.icc.kspt.generator.grammar.generated;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class Test2Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BEGIN=1, CALL=2, CONST=3, DO=4, END=5, IF=6, ODD=7, PROCEDURE=8, THEN=9, 
		VAR=10, WHILE=11, PLUS=12, MINUS=13, TIMES=14, SLASH=15, LPAREN=16, RPAREN=17, 
		COMMA=18, DOT=19, COLON=20, SEMICOLON=21, ASSIGN=22, EQUAL=23, NOTEQUAL=24, 
		LESSTHAN=25, GREATTHAN=26, LESSOREQUALTHAN=27, GREATOREQUALTHAN=28, ID=29, 
		NUMBER=30, WS=31;
	public static final int
		RULE_program = 0, RULE_block = 1, RULE_constDeclaration = 2, RULE_constAssign = 3, 
		RULE_varDeclaration = 4, RULE_varAssign = 5, RULE_procedure = 6, RULE_operator = 7, 
		RULE_operatorAssign = 8, RULE_operatorCall = 9, RULE_operatorBegin = 10, 
		RULE_operatorIf = 11, RULE_operatorWhile = 12, RULE_condition = 13, RULE_conditionOdd = 14, 
		RULE_conditionComparison = 15, RULE_comparison = 16, RULE_expression = 17, 
		RULE_exprSign = 18, RULE_summand = 19, RULE_multSign = 20, RULE_multiplier = 21, 
		RULE_multiplierId = 22, RULE_multiplierNumber = 23, RULE_multiplierExpression = 24;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "block", "constDeclaration", "constAssign", "varDeclaration", 
			"varAssign", "procedure", "operator", "operatorAssign", "operatorCall", 
			"operatorBegin", "operatorIf", "operatorWhile", "condition", "conditionOdd", 
			"conditionComparison", "comparison", "expression", "exprSign", "summand", 
			"multSign", "multiplier", "multiplierId", "multiplierNumber", "multiplierExpression"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'BEGIN'", "'CALL'", "'CONST'", "'DO'", "'END'", "'IF'", "'ODD'", 
			"'PROCEDURE'", "'THEN'", "'VAR'", "'WHILE'", "'+'", "'-'", "'*'", "'/'", 
			"'('", "')'", "','", "'.'", "':'", "';'", "':='", "'='", "'!='", "'<'", 
			"'>'", "'<='", "'>='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "BEGIN", "CALL", "CONST", "DO", "END", "IF", "ODD", "PROCEDURE", 
			"THEN", "VAR", "WHILE", "PLUS", "MINUS", "TIMES", "SLASH", "LPAREN", 
			"RPAREN", "COMMA", "DOT", "COLON", "SEMICOLON", "ASSIGN", "EQUAL", "NOTEQUAL", 
			"LESSTHAN", "GREATTHAN", "LESSOREQUALTHAN", "GREATOREQUALTHAN", "ID", 
			"NUMBER", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Test2.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Test2Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode DOT() { return getToken(Test2Parser.DOT, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Test2Listener ) ((Test2Listener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Test2Listener ) ((Test2Listener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Test2Visitor ) return ((Test2Visitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			block();
			setState(51);
			match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public OperatorContext operator() {
			return getRuleContext(OperatorContext.class,0);
		}
		public ConstDeclarationContext constDeclaration() {
			return getRuleContext(ConstDeclarationContext.class,0);
		}
		public VarDeclarationContext varDeclaration() {
			return getRuleContext(VarDeclarationContext.class,0);
		}
		public List<ProcedureContext> procedure() {
			return getRuleContexts(ProcedureContext.class);
		}
		public ProcedureContext procedure(int i) {
			return getRuleContext(ProcedureContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Test2Listener ) ((Test2Listener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Test2Listener ) ((Test2Listener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Test2Visitor ) return ((Test2Visitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CONST) {
				{
				setState(53);
				constDeclaration();
				}
			}

			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VAR) {
				{
				setState(56);
				varDeclaration();
				}
			}

			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PROCEDURE) {
				{
				{
				setState(59);
				procedure();
				}
				}
				setState(64);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(65);
			operator();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstDeclarationContext extends ParserRuleContext {
		public TerminalNode CONST() { return getToken(Test2Parser.CONST, 0); }
		public List<ConstAssignContext> constAssign() {
			return getRuleContexts(ConstAssignContext.class);
		}
		public ConstAssignContext constAssign(int i) {
			return getRuleContext(ConstAssignContext.class,i);
		}
		public TerminalNode SEMICOLON() { return getToken(Test2Parser.SEMICOLON, 0); }
		public List<TerminalNode> COMMA() { return getTokens(Test2Parser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(Test2Parser.COMMA, i);
		}
		public ConstDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Test2Listener ) ((Test2Listener)listener).enterConstDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Test2Listener ) ((Test2Listener)listener).exitConstDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Test2Visitor ) return ((Test2Visitor<? extends T>)visitor).visitConstDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstDeclarationContext constDeclaration() throws RecognitionException {
		ConstDeclarationContext _localctx = new ConstDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_constDeclaration);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(CONST);
			setState(73);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(68);
					constAssign();
					setState(69);
					match(COMMA);
					}
					} 
				}
				setState(75);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(76);
			constAssign();
			setState(77);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstAssignContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(Test2Parser.ID, 0); }
		public TerminalNode EQUAL() { return getToken(Test2Parser.EQUAL, 0); }
		public TerminalNode NUMBER() { return getToken(Test2Parser.NUMBER, 0); }
		public ConstAssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constAssign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Test2Listener ) ((Test2Listener)listener).enterConstAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Test2Listener ) ((Test2Listener)listener).exitConstAssign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Test2Visitor ) return ((Test2Visitor<? extends T>)visitor).visitConstAssign(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstAssignContext constAssign() throws RecognitionException {
		ConstAssignContext _localctx = new ConstAssignContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_constAssign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(ID);
			setState(80);
			match(EQUAL);
			setState(81);
			match(NUMBER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclarationContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(Test2Parser.VAR, 0); }
		public TerminalNode ID() { return getToken(Test2Parser.ID, 0); }
		public TerminalNode SEMICOLON() { return getToken(Test2Parser.SEMICOLON, 0); }
		public List<VarAssignContext> varAssign() {
			return getRuleContexts(VarAssignContext.class);
		}
		public VarAssignContext varAssign(int i) {
			return getRuleContext(VarAssignContext.class,i);
		}
		public VarDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Test2Listener ) ((Test2Listener)listener).enterVarDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Test2Listener ) ((Test2Listener)listener).exitVarDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Test2Visitor ) return ((Test2Visitor<? extends T>)visitor).visitVarDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDeclarationContext varDeclaration() throws RecognitionException {
		VarDeclarationContext _localctx = new VarDeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_varDeclaration);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(VAR);
			setState(87);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(84);
					varAssign();
					}
					} 
				}
				setState(89);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			setState(90);
			match(ID);
			setState(91);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarAssignContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(Test2Parser.ID, 0); }
		public TerminalNode COMMA() { return getToken(Test2Parser.COMMA, 0); }
		public VarAssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varAssign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Test2Listener ) ((Test2Listener)listener).enterVarAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Test2Listener ) ((Test2Listener)listener).exitVarAssign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Test2Visitor ) return ((Test2Visitor<? extends T>)visitor).visitVarAssign(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarAssignContext varAssign() throws RecognitionException {
		VarAssignContext _localctx = new VarAssignContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_varAssign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(ID);
			setState(94);
			match(COMMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProcedureContext extends ParserRuleContext {
		public TerminalNode PROCEDURE() { return getToken(Test2Parser.PROCEDURE, 0); }
		public TerminalNode ID() { return getToken(Test2Parser.ID, 0); }
		public List<TerminalNode> SEMICOLON() { return getTokens(Test2Parser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(Test2Parser.SEMICOLON, i);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ProcedureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedure; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Test2Listener ) ((Test2Listener)listener).enterProcedure(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Test2Listener ) ((Test2Listener)listener).exitProcedure(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Test2Visitor ) return ((Test2Visitor<? extends T>)visitor).visitProcedure(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProcedureContext procedure() throws RecognitionException {
		ProcedureContext _localctx = new ProcedureContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_procedure);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(PROCEDURE);
			setState(97);
			match(ID);
			setState(98);
			match(SEMICOLON);
			setState(99);
			block();
			setState(100);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperatorContext extends ParserRuleContext {
		public OperatorAssignContext operatorAssign() {
			return getRuleContext(OperatorAssignContext.class,0);
		}
		public OperatorCallContext operatorCall() {
			return getRuleContext(OperatorCallContext.class,0);
		}
		public OperatorBeginContext operatorBegin() {
			return getRuleContext(OperatorBeginContext.class,0);
		}
		public OperatorIfContext operatorIf() {
			return getRuleContext(OperatorIfContext.class,0);
		}
		public OperatorWhileContext operatorWhile() {
			return getRuleContext(OperatorWhileContext.class,0);
		}
		public OperatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Test2Listener ) ((Test2Listener)listener).enterOperator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Test2Listener ) ((Test2Listener)listener).exitOperator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Test2Visitor ) return ((Test2Visitor<? extends T>)visitor).visitOperator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperatorContext operator() throws RecognitionException {
		OperatorContext _localctx = new OperatorContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_operator);
		try {
			setState(107);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(102);
				operatorAssign();
				}
				break;
			case CALL:
				enterOuterAlt(_localctx, 2);
				{
				setState(103);
				operatorCall();
				}
				break;
			case BEGIN:
				enterOuterAlt(_localctx, 3);
				{
				setState(104);
				operatorBegin();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 4);
				{
				setState(105);
				operatorIf();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 5);
				{
				setState(106);
				operatorWhile();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperatorAssignContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(Test2Parser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(Test2Parser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public OperatorAssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operatorAssign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Test2Listener ) ((Test2Listener)listener).enterOperatorAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Test2Listener ) ((Test2Listener)listener).exitOperatorAssign(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Test2Visitor ) return ((Test2Visitor<? extends T>)visitor).visitOperatorAssign(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperatorAssignContext operatorAssign() throws RecognitionException {
		OperatorAssignContext _localctx = new OperatorAssignContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_operatorAssign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(ID);
			setState(110);
			match(ASSIGN);
			setState(111);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperatorCallContext extends ParserRuleContext {
		public TerminalNode CALL() { return getToken(Test2Parser.CALL, 0); }
		public TerminalNode ID() { return getToken(Test2Parser.ID, 0); }
		public OperatorCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operatorCall; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Test2Listener ) ((Test2Listener)listener).enterOperatorCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Test2Listener ) ((Test2Listener)listener).exitOperatorCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Test2Visitor ) return ((Test2Visitor<? extends T>)visitor).visitOperatorCall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperatorCallContext operatorCall() throws RecognitionException {
		OperatorCallContext _localctx = new OperatorCallContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_operatorCall);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(CALL);
			setState(114);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperatorBeginContext extends ParserRuleContext {
		public TerminalNode BEGIN() { return getToken(Test2Parser.BEGIN, 0); }
		public List<OperatorContext> operator() {
			return getRuleContexts(OperatorContext.class);
		}
		public OperatorContext operator(int i) {
			return getRuleContext(OperatorContext.class,i);
		}
		public TerminalNode END() { return getToken(Test2Parser.END, 0); }
		public List<TerminalNode> SEMICOLON() { return getTokens(Test2Parser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(Test2Parser.SEMICOLON, i);
		}
		public OperatorBeginContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operatorBegin; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Test2Listener ) ((Test2Listener)listener).enterOperatorBegin(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Test2Listener ) ((Test2Listener)listener).exitOperatorBegin(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Test2Visitor ) return ((Test2Visitor<? extends T>)visitor).visitOperatorBegin(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperatorBeginContext operatorBegin() throws RecognitionException {
		OperatorBeginContext _localctx = new OperatorBeginContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_operatorBegin);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(BEGIN);
			setState(122);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(117);
					operator();
					setState(118);
					match(SEMICOLON);
					}
					} 
				}
				setState(124);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			setState(125);
			operator();
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEMICOLON) {
				{
				setState(126);
				match(SEMICOLON);
				}
			}

			setState(129);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperatorIfContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(Test2Parser.IF, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode THEN() { return getToken(Test2Parser.THEN, 0); }
		public OperatorContext operator() {
			return getRuleContext(OperatorContext.class,0);
		}
		public OperatorIfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operatorIf; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Test2Listener ) ((Test2Listener)listener).enterOperatorIf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Test2Listener ) ((Test2Listener)listener).exitOperatorIf(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Test2Visitor ) return ((Test2Visitor<? extends T>)visitor).visitOperatorIf(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperatorIfContext operatorIf() throws RecognitionException {
		OperatorIfContext _localctx = new OperatorIfContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_operatorIf);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(IF);
			setState(132);
			condition();
			setState(133);
			match(THEN);
			setState(134);
			operator();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperatorWhileContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(Test2Parser.WHILE, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public TerminalNode DO() { return getToken(Test2Parser.DO, 0); }
		public OperatorContext operator() {
			return getRuleContext(OperatorContext.class,0);
		}
		public OperatorWhileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operatorWhile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Test2Listener ) ((Test2Listener)listener).enterOperatorWhile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Test2Listener ) ((Test2Listener)listener).exitOperatorWhile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Test2Visitor ) return ((Test2Visitor<? extends T>)visitor).visitOperatorWhile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperatorWhileContext operatorWhile() throws RecognitionException {
		OperatorWhileContext _localctx = new OperatorWhileContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_operatorWhile);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(WHILE);
			setState(137);
			condition();
			setState(138);
			match(DO);
			setState(139);
			operator();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionContext extends ParserRuleContext {
		public ConditionOddContext conditionOdd() {
			return getRuleContext(ConditionOddContext.class,0);
		}
		public ConditionComparisonContext conditionComparison() {
			return getRuleContext(ConditionComparisonContext.class,0);
		}
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Test2Listener ) ((Test2Listener)listener).enterCondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Test2Listener ) ((Test2Listener)listener).exitCondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Test2Visitor ) return ((Test2Visitor<? extends T>)visitor).visitCondition(this);
			else return visitor.visitChildren(this);
		}
	}
